# Hermes

./: .gitignore  README.md
.github/workflows/: landing.yml  release.yml  test.yml
backend/: pyproject.toml  pytest.ini
backend/app/: __init__.py  deps.py  lifecycle.py  main.py  settings.py
backend/app/api/routes/: account.py  adaptive.py  auth.py  backtest.py  brokers.py  notifications.py  onboarding.py  optimize.py  positions.py  strategy.py  system.py  trades.py  trading.py  tunnel.py
backend/app/api/schemas/: adaptive.py  broker.py  notification.py  onboarding.py  strategy.py  trading.py
backend/app/api/ws/: manager.py  routes.py
backend/app/core/adaptive/: calibrator.py  policy.py  regime.py  walk_forward.py
backend/app/core/brokers/: base.py  ccxt_adapter.py  models.py  mt5_adapter.py  mt5_servers.py  registry.py
backend/app/core/notifications/: service.py  telegram.py  templates.py  webpush.py
backend/app/core/risk/: engine.py
backend/app/core/scheduler/: apscheduler.py
backend/app/core/security/: jwt_service.py  kdf.py  vault.py
backend/app/core/strategy/: ensemble_backtest.py  indicators.py  presets.py  runner.py  signals.py  validator.py
backend/app/core/tunnel/: ngrok.py  qr.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  backtest_run.py  broker_account.py  calibration_run.py  equity_point.py  log_entry.py  notification_sub.py  position_snapshot.py  strategy_config.py  trade.py
backend/app/services/: account_service.py  backtest_service.py  onboarding_service.py  optimize_service.py  trading_service.py  tunnel_service.py  update_service.py
backend/app/workers/: trading_worker.py
backend/scripts/: backtest_ensemble.py
backend/tests/: conftest.py  test_v1_0_20.py  test_v1_0_22.py
backend/tests/e2e/: test_smoke_api.py
backend/tests/integration/: test_mock_broker.py
backend/tests/unit/: test_jwt_service.py  test_kdf.py  test_models.py  test_policy.py  test_presets.py  test_regime.py  test_update_service.py  test_validator.py  test_vault.py  test_ws_manager.py
desktop/: dev_runner.py  ipc_bridge.py  main.py  port_finder.py  single_instance.py  splash.py  window.py
docs/: ARCHITECTURE.md  USER_GUIDE_RU.md
docs/presentation/: Hermes_BAI_Core.pptx  build_pptx.py  index.html
frontend/: components.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
frontend/public/: service-worker-push.js
frontend/public/hermes/: README.md
frontend/public/icons/: README.md
frontend/src/: App.tsx  main.tsx
frontend/src/api/: types.ts  useAccount.ts  useAdaptive.ts  useBacktest.ts  useBrokers.ts  useNotifications.ts  useOnboarding.ts  useOptimize.ts  usePositions.ts  useStrategy.ts  useSystem.ts  useTrades.ts  useTrading.ts  useTunnel.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/lib/: api.ts  commands.ts  format.ts  framer-motion-shim.tsx  toast.ts  webpush.ts  webview.ts  ws.ts
frontend/src/pages/: About.tsx  Adaptive.tsx  Backtest.tsx  Brokers.tsx  Dashboard.tsx  Logs.tsx  MobileLink.tsx  Notifications.tsx  Onboarding.tsx  Optimize.tsx  Settings.tsx  Strategy.tsx  Trades.tsx  Unlock.tsx
frontend/src/stores/: system.ts
frontend/src/styles/: index.css
frontend/src/tests/: format.test.ts  (+4 more)
landing/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json  vercel.json
landing/public/: robots.txt
legacy/: backtester.py  config.py  data_manager.py  indicators.py  mt5_connector.py  optimizer.py  reporting.py  risk_manager.py  signal_generator.py  strategy.py  telegram_bot.py
packaging/macos/: Distribution.xml  app-icon.icns  build_app.sh  build_pkg.sh  conclusion.txt  entitlements.plist  license.txt  unblock-hermes.command  welcome.txt
packaging/pyinstaller/: hermes.spec  runtime_hook.py  version_info.txt
packaging/windows/: installer.iss
scripts/: build_release.ps1  build_release_macos.sh  compute_hashes.ps1  dev_backend.ps1  dev_desktop.ps1  dev_frontend.ps1  generate_icons.py  generate_license_rtf.py  smoke.ps1
(+51 files in other folders)
