[project]
name = "hermes-backend"
version = "1.0.0"
description = "Hermes Trading Bot — backend (BAI Core)"
authors = [{ name = "BAI Core", email = "info@baicore.kz" }]
readme = "../README.md"
requires-python = ">=3.11,<3.13"

# Core runtime dependencies. MetaTrader5 is Windows-only and gated by an
# environment marker so macOS / Linux installs skip it cleanly.
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "aiosqlite>=0.20,<1.0",
    "alembic>=1.13,<2.0",
    "cryptography>=43.0,<46.0",
    "argon2-cffi>=23.1,<25.0",
    "pyjwt[crypto]>=2.9,<3.0",
    "python-multipart>=0.0.20,<1.0",
    "platformdirs>=4.3,<5.0",
    "websockets>=13.1,<15.0",
    "httpx>=0.27,<1.0",
    "python-dateutil>=2.9,<3.0",
    "apscheduler>=3.10,<4.0",
    "slowapi>=0.1.9,<1.0",
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "scipy>=1.13,<2.0",
    "optuna>=4.0,<5.0",
    "ccxt>=4.4,<5.0",
    "pywebpush>=2.0,<3.0",
    "qrcode[pil]>=8.0,<9.0",
    "pyngrok>=7.2,<8.0",
    "MetaTrader5>=5.0.45 ; sys_platform == 'win32'",
]

[project.optional-dependencies]
# Tests — kept minimal so CI install is fast.
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-mock>=3.14,<4.0",
    "ruff>=0.7,<1.0",
]

# Desktop wrapper deps. Each line is gated by sys_platform so pip resolves
# only the relevant ones on each runner.
desktop = [
    "pywebview>=5.3,<6.0",
    "win10toast>=0.9 ; sys_platform == 'win32'",
    "pync>=2.0 ; sys_platform == 'darwin'",
]

# Backtest reporting (legacy reports + Streamlit prototype). Optional —
# CI release build doesn't need this; only pull in for local development.
reports = [
    "matplotlib>=3.9,<4.0",
    "seaborn>=0.13,<1.0",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
